<resources>
    <string name="app_name">Sonota</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cal">カレンダー</string>
    <string name="menu_rc">収入管理</string>
    <string name="menu_ec">出費管理</string>
    <string name="menu_tmp">テンプレート</string>
    <string name="menu_clc">分割払い管理</string>
    <string name="menu_set">アルバイト先管理</string>

    <string name="ibento">イベント名</string>
    <string name="ibento2">イベント</string>
    <string name="baito">バイト</string>
    <string name="kaisizikoku">開始時刻</string>
    <string name="syuryouzikoku">終了時刻</string>
    <string name="kara">～</string>
    <string name="kaunin">登録</string>

    <string-array name="list">
        <item>Apple</item>
        <item>Google</item>
        <item>Yahoo!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
