<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_cal"

            android:title="@string/menu_cal"/>
        <item
            android:id="@+id/nav_ec"

            android:title="@string/menu_ec" />
        <item
            android:id="@+id/nav_rc"

            android:title="@string/menu_rc" />
        <item
            android:id="@+id/nav_tmp"

            android:title="@string/menu_tmp" />
        <item
            android:id="@+id/nav_clc"

            android:title="@string/menu_clc" />
        <item
            android:id="@+id/nav_set"

            android:title="@string/menu_set"
            />

</menu>
