<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cal_adddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cal_eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/ibento"
                android:textColor="#C4020516"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_cal_eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="イベントを入力"
                android:inputType="textPersonName"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="189dp"
                    android:layout_height="226dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_cal_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kaisizikoku"
                        android:textColor="#C4020516"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/np_cal_startTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@+id/np_cal_startTime2" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text=":"
                            android:textColor="#C4020516"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <NumberPicker
                            android:id="@+id/np_cal_startTime2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_cal_tilde"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/kara"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_cal_endTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/syuryouzikoku"
                        android:textColor="#C4020516"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/np_cal_endTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text=":"
                            android:textColor="#C4020516"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <NumberPicker
                            android:id="@+id/np_cal_endTime2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#aaf"
                            android:gravity="center"
                            android:textSize="40sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cal_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="登録"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textColor="#00f"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>