<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tmp_partName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="アルバイト名"
                android:textColor="#C4020516"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_tmp_partName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:animationCache="true"
                android:entries="@array/list"
                android:paddingRight="10dp"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tmp_startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kaisizikoku"
                        android:textColor="#C4020516"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/np_tmp_startTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@+id/np_tmp_startTime2" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text=":"
                            android:textColor="#C4020516"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <NumberPicker
                            android:id="@+id/np_tmp_startTime2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_tmp_tilde"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/kara"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tmp_endTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/syuryouzikoku"
                        android:textColor="#C4020516"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/np_tmp_endTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center"
                            android:text=":"
                            android:textColor="#C4020516"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <NumberPicker
                            android:id="@+id/np_tmp_endTime2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#ffffff" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#aaf"
                            android:gravity="center"
                            android:textSize="40sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"><![CDATA[

            />

            ]]>

            <TextView
                android:id="@+id/tv_tmp_brakeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                android:layout_weight="1"
                android:text="休憩時間"
                android:textColor="#C4020516"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_tmp_braekTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="#C4020516"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tmp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="分"
                android:textColor="#C4020516"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_tmp_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="登録"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textColor="#00f"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>